generator client {
  provider = "prisma-client"
  output   = "../app/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

model User {
  id                   String            @id @default(cuid())
  email                String            @unique
  password             String
  name                 String
  notificationSettings Json              @default("{}")
  createdAt            DateTime          @default(now())
  memberships          WorkspaceMember[]
  notifications        Notification[]
  sessions             Session[]
  passwordResetTokens  PasswordResetToken[]
}

model Session {
  id        String   @id @default(cuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Workspace {
  id               String            @id @default(cuid())
  name             String
  slug             String            @unique
  plan             String            @default("free")
  createdAt        DateTime          @default(now())
  members          WorkspaceMember[]
  notifications     Notification[]
  customers        Customer[]
  projects         Project[]
  templates        WorkflowTemplate[]
  inquiries        Inquiry[]
  messageTemplates MessageTemplate[]
  invites          WorkspaceInvite[]
  orderFormFields  OrderFormField[]
  subscription     Subscription?
  payments         Payment[]
}

model WorkspaceMember {
  id          String    @id @default(cuid())
  workspaceId String
  userId      String
  role        String    @default("MEMBER")
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, userId])
}

model Customer {
  id          String    @id @default(cuid())
  workspaceId String
  name        String
  contact     String?
  memo        String?
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  projects    Project[]
}

model Project {
  id             String            @id @default(cuid())
  workspaceId    String
  customerId     String
  title          String
  dueDate        DateTime?
  budget         Int?
  assigneeId     String?
  currentStageId String?
  archivedAt     DateTime?
  createdAt      DateTime          @default(now())
  workspace      Workspace         @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  customer       Customer          @relation(fields: [customerId], references: [id])
  stages         WorkflowStage[]
  revisions      RevisionRequest[]
  assets         Asset[]
  events         TimelineEvent[]
  publicPage     PublicProjectPage?

  @@index([workspaceId])
}

model WorkflowTemplate {
  id          String          @id @default(cuid())
  workspaceId String
  name        String
  industry    String?
  isDefault   Boolean         @default(false)
  createdAt   DateTime        @default(now())
  workspace   Workspace       @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  stages      TemplateStage[]
}

model TemplateStage {
  id            String           @id @default(cuid())
  templateId    String
  internalName  String
  customerName  String
  order         Int
  template      WorkflowTemplate @relation(fields: [templateId], references: [id], onDelete: Cascade)
}

model WorkflowStage {
  id           String    @id @default(cuid())
  projectId    String
  internalName String
  customerName String
  order        Int
  completedAt  DateTime?
  project      Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)
}

model RevisionRequest {
  id         String   @id @default(cuid())
  projectId  String
  content    String
  priority   String   @default("MEDIUM")
  status     String   @default("OPEN")
  assigneeId String?
  source     String   @default("MANUAL")
  fileUrls   Json     @default("[]")
  createdAt  DateTime @default(now())
  project    Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  comments   RevisionComment[]
  assets     Asset[]

  @@index([projectId, status])
}

model RevisionComment {
  id          String   @id @default(cuid())
  revisionId  String
  parentId    String?
  authorType  String   // "WORKER" | "CLIENT"
  authorName  String
  authorEmail String?
  content     String
  createdAt   DateTime @default(now())

  revision RevisionRequest  @relation(fields: [revisionId], references: [id], onDelete: Cascade)
  parent   RevisionComment? @relation("CommentReplies", fields: [parentId], references: [id], onDelete: Restrict)
  replies  RevisionComment[] @relation("CommentReplies")

  @@index([revisionId, createdAt])
}

model Asset {
  id                String           @id @default(cuid())
  projectId         String
  revisionRequestId String?
  name              String
  url               String
  type              String           @default("OTHER")
  version           String?
  status            String           @default("PREPARING")
  shareScheduledAt  DateTime?
  expiredAt         DateTime?
  createdAt         DateTime         @default(now())
  project           Project          @relation(fields: [projectId], references: [id], onDelete: Cascade)
  revisionRequest   RevisionRequest? @relation(fields: [revisionRequestId], references: [id], onDelete: SetNull)

  @@index([revisionRequestId])
  @@index([projectId, shareScheduledAt])
}

model PublicProjectPage {
  id        String   @id @default(cuid())
  projectId String   @unique
  token     String   @unique @default(uuid())
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
}

model Inquiry {
  id          String    @id @default(cuid())
  workspaceId String
  name        String
  contact     String?
  content     String
  fileUrls    Json      @default("[]")
  fieldValues Json      @default("{}")
  status      String    @default("PENDING")
  formType    String    @default("INQUIRY")
  projectId   String?
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@index([workspaceId, status])
}

model OrderFormField {
  id          String    @id @default(cuid())
  workspaceId String
  label       String
  fieldKey    String
  type        String
  placeholder String?
  required    Boolean   @default(false)
  order       Int
  options     Json?
  isSystem    Boolean   @default(false)
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@unique([workspaceId, fieldKey])
}

model MessageTemplate {
  id          String    @id @default(cuid())
  workspaceId String
  name        String
  type        String
  content     String
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
}

model TimelineEvent {
  id        String   @id @default(cuid())
  projectId String
  title     String
  eventType String
  metadata  Json?
  createdAt DateTime @default(now())
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
}

model WorkspaceInvite {
  id          String    @id @default(cuid())
  workspaceId String
  email       String
  token       String    @unique @default(uuid())
  role        String    @default("MEMBER")
  status      String    @default("PENDING")
  createdAt   DateTime  @default(now())
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
}

model PasswordResetToken {
  id        String    @id @default(cuid())
  token     String    @unique
  userId    String
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model Notification {
  id          String    @id @default(cuid())
  userId      String
  workspaceId String
  type        String
  title       String
  body        String
  href        String
  isRead      Boolean   @default(false)
  createdAt   DateTime  @default(now())
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  workspace   Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)

  @@index([userId, isRead])
  @@index([workspaceId])
}

model Subscription {
  id                 String    @id @default(cuid())
  workspaceId        String    @unique
  workspace          Workspace @relation(fields: [workspaceId], references: [id], onDelete: Cascade)
  plan               String    @default("free") // "free" | "pro"
  billingCycle       String?                    // "monthly" | "yearly" | null
  status             String    @default("active") // "active" | "past_due"
  billingKey         String?
  customerKey        String?
  cardName           String?  // 카드사명 (NicePayments 응답)
  cardNum            String?  // 마스킹 카드번호 (NicePayments 응답)
  currentPeriodStart DateTime?
  currentPeriodEnd   DateTime?
  cancelAtPeriodEnd  Boolean   @default(false)
  retryCount         Int       @default(0)
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt
  payments           Payment[]
}

model Payment {
  id             String       @id @default(cuid())
  workspaceId    String
  workspace      Workspace    @relation(fields: [workspaceId], references: [id])
  subscriptionId String
  subscription   Subscription @relation(fields: [subscriptionId], references: [id])
  paymentKey     String       @unique
  orderId        String       @unique
  amount         Int
  status         String       // "pending" | "done" | "failed" | "canceled"
  method         String?
  failReason     String?
  paidAt         DateTime?
  createdAt      DateTime     @default(now())

  @@index([workspaceId, createdAt])
}
